--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,7 +8,7 @@ main:
     url: '/about/'
     weight: 10
   - name: Projects
-    url: '#../projects/'
+    url: 'projects/'
     weight: 20
 
 # Link to a PDF of your resume/CV from the menu.
