Change theme color

--- a/data/themes/matthias.toml
+++ b/data/themes/matthias.toml
@@ -12,7 +12,11 @@ menu_primary = "#fff"
 menu_text = "#000000"
 menu_text_active = "#ec4d37"
 menu_title = "#000000"
-menu_hover = "#ec4d37"
+menu_text_hover = "#ec4d37"
+
+# Links
+link = "#000000"
+link_hover = "#ec4d37"
 
 # Home sections
 home_section_odd = "rgb(255, 255, 255)"
