Update description and add sharing image

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -15,7 +15,7 @@ font_size: M
 site_type: Person
 local_business_type: ''
 org_name: ''
-description: ''
+description: 'The personal website of Matthias Ronnau.'
 twitter: ''
 
 # Contact (edit or remove options as required)
