--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -5,11 +5,14 @@
 
 main:
   - name: About Me
-    url: '/about/'
+    url: 'about/'
     weight: 10
   - name: Projects
     url: 'projects/'
     weight: 20
+  - name: Posts
+    url: 'posts/'
+    weight: 30
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
